fixing title not centered

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,16 @@ body {
 
 header {
     text-align:center;
-    background:linear-gradient(90 deg, #5eb2dd, #01567a);
+    background:linear-gradient(90 deg, #ffffff, #ffffff);
     color: #000000;
-    font-size: 2rem;
+    font-size: 2.5rem;
 
+}
+header h1 { 
+    margin: 0;
+    font-size: 2.5rem;
+    line-height: 1.2;
+    text-align: center;
 }
 footer { 
     text-align: center; 
